port updates from telecel